gitops/base/ingress/togglemaster-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-edge
---
apiVersion: v1
kind: Service
metadata:
  name: auth-backend
  namespace: togglemaster-edge
spec:
  type: ExternalName
  externalName: auth-service.auth-namespace.svc.cluster.local
  ports:
    - port: 8001
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: flag-backend
  namespace: togglemaster-edge
spec:
  type: ExternalName
  externalName: flag-service.flag-namespace.svc.cluster.local
  ports:
    - port: 8002
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-backend
  namespace: togglemaster-edge
spec:
  type: ExternalName
  externalName: targeting-service.targeting-namespace.svc.cluster.local
  ports:
    - port: 8003
      targetPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-backend
  namespace: togglemaster-edge
spec:
  type: ExternalName
  externalName: evaluation-service.evaluation-namespace.svc.cluster.local
  ports:
    - port: 8004
      targetPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-backend
  namespace: togglemaster-edge
spec:
  type: ExternalName
  externalName: analytics-service.analytics-namespace.svc.cluster.local
  ports:
    - port: 8005
      targetPort: 8005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster-edge
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-backend
                port:
                  number: 8001
          - path: /flags(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flag-backend
                port:
                  number: 8002
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-backend
                port:
                  number: 8003
          - path: /evaluation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-backend
                port:
                  number: 8004
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-backend
                port:
                  number: 8005
